some more work on the CSA and USA

--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -677,4 +677,14 @@ combinedsyndicates.211.d:0 "For what ever reason the Mexicans have refused to ev
 combinedsyndicates.211.a:0 "Foolish Mexicans"
 combinedsyndicates.212.t:0 "The Treaty reaps its benefits"
 combinedsyndicates.212.d:0 "The Treaty we have signed with the American Government has finally begun to reap its benefits. As promised the Americans have helped to build up our industry throughout Mexico. Men and women from the southwest of America have migrated into Mexico and plenty of them are fit for fighting duty to defend the Mexico from Reactionary capitalists. "
-combinedsyndicates.211.a:0 "Gracias Camaradas!"
+combinedsyndicates.212.a:0 "Gracias Camaradas!"
+combinedsyndicates.213.t:0 "Aiding Central America"
+combinedsyndicates.213.d:0 "War has broken out in central America between Centroamerica and the United Provinces. Our comrades in the Central America are asking us now that the civil war in America is done to help them in their own fight against capitalism and reactionary forces. "
+combinedsyndicates.213.a:0 "Lets Aid our Comrades!"
+combinedsyndicates.213.b:0 "We need to focus on America"
+combinedsyndicates.214.t:0 "Aid from America!"
+combinedsyndicates.214.d:0 "The Americans have answered our call and sent us not just guns to fight the United Provinces but volunteers have also arrived fresh from the chaos in America proper and desiring to help fight for the people here in Central America!"
+combinedsyndicates.214.a:0 "Gracias Camaradas!"
+combinedsyndicates.215.t:0 "Central American War is over"
+combinedsyndicates.215.d:0 "For good or for ill are volunteers have arrived back in America following the war in central America. Our soldiers seemed to have learned much fighting in Central America."
+combinedsyndicates.215.a:0 "Welcome Home"
