--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -90,21 +90,21 @@ USA_american_ceaser_desc:0 ""
 USA_review_military:0 "Review the American Military"
 USA_review_military_desc:0 ""
 USA_army:0 "the US Army"
-USA_superior_fire_power:0 "Superior Firepower"
+USA_superior_fire_power:0 "Marshall's Firepower Plan"
 USA_superior_fire_power_desc:0 ""
-USA_pass_the_ammunation:0 "Pass the ammunition"
+USA_pass_the_ammunation:0 "Pass The ammunition"
 USA_pass_the_ammunation_desc:0 ""
 USA_fire_the_guns:0 "Fire the Guns"
 USA_fire_the_guns_desc:0 ""
-USA_grand_battle_plan:0 "Grand Battle Plan"
+USA_grand_battle_plan:0 "Eisenhower's Grand Strategy"
 USA_grand_battle_plan_desc:0 ""
 USA_joint_chiefs_of_staff:0 "Joint Chiefs of Staff"
 USA_joint_chiefs_of_staff_desc:0 ""
 USA_contingencies:0 "Rapid Planning Training"
 USA_contingencies_desc:0 ""
-USA_mobile_warfare:0 "Mobile Warfare"
+USA_mobile_warfare:0 "Bradly's Mobile Plan"
 USA_mobile_warfare_desc:0 ""
-USA_american_cars:0 "American automotive industry"
+USA_american_cars:0 "Shock and Awe"
 USA_american_cars_desc:0 ""
 USA_tanks:0 "American Tanks"
 USA_tanks_desc:0 ""
@@ -120,13 +120,13 @@ USA_army_rangers_desc:0 ""
 ### Foci - Navy ###
 USA_usn:0 "The US Navy"
 USA_usn_desc:0 ""
-USA_battle_ships:0 "Favour Battleships"
+USA_battle_ships:0 "Adams's Battleships"
 USA_battle_ships_desc:0 ""
 USA_battle_cruisers:0 "Battle Cruisers"
 USA_battle_cruisers_desc:0 ""
 USA_new_battleships:0 "New Battleships"
 USA_new_battleships_desc:0 ""
-USA_aircraft_carriers:0 "Favour Aircraft Carriers"
+USA_aircraft_carriers:0 "Forrestal's Carriers"
 USA_aircraft_carriers_desc:0 ""
 USA_escorts:0 "Escorts"
 USA_escorts_desc:0 ""
@@ -147,13 +147,13 @@ USA_new_aircraft_carriers_desc:0 ""
 ### Foci - Air Force ###
 USA_usaf:0 "the USAF"
 USA_usaf_desc:0 ""
-USA_air_supremecy:0 "Favour Air Supremacy"
+USA_air_supremecy:0 "Rickenbacker's Air Supremacy"
 USA_air_supremecy_desc:0 ""
 USA_fighter_efforts:0 "Fighter Effort"
 USA_fighter_efforts_desc:0 ""
 USA_strategic_bombers:0 "Strategic Bombers"
 USA_strategic_bombers_desc:0 ""
-USA_air_support:0 "Favour Air Support"
+USA_air_support:0 "Spaatz's Air Support"
 USA_air_support_desc:0 ""
 USA_cas_efforts:0 "Close Air Support"
 USA_cas_efforts_desc:0 ""
@@ -449,7 +449,8 @@ USA_mine_bureau:0 "Mine Bureau"
 USA_agriculture_improvements:0 "Agricultural Improvements"
 USA_liberty_ship:0 "Liberty Ships"
 USA_democracy_arsenal:0 "Arsenal of Democracy"
-
+USA_working_womens:0 "Working Women"
+USA_reconstruction_policy:0 "Reconstruction Policy"
 ### Parties ###
 USA_totalist_party:0 "ACP"
 USA_totalist_party_long:0 "American Communist Party"
