Made world events actually increase world tension

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -5,14 +5,17 @@
 worldnews.1.t:0 "The Second American Civil War"
 worldnews.1.d:0 "To uneducated foreigners, it might seem like the crisis in the United States happened out of nowhere, but experts agree that this was a civil war years in making. Ever since the collapse of the New York Stock Exchange in 1929, the economy of the United States has been in constant downturn. \nNow, the United States has devolved into a three-way civil war between the loyalists of the old government, the syndicalist Combined Syndicates of America and the conservative and xenophobic American Union State. There have already been reports of arriving volunteers from Europe to fight for a faction of their liking. The Second American Civil War might just be the first of the many battlefields between the great powers of the world in this tough time for humanity."
 worldnews.1.a:0 "A troublesome development."
+second_american_civil_war_threat:0 "The Second American Civil War"
 
 worldnews.3.t:0 "The Second Russian Civil War"
 worldnews.3.d:0 "Mere 20 years ago, in the last years of the Weltkrieg, the Russian Empire collapsed in turmoil, ripped apart between nationalist movements, the Whites and the Reds. After a German intervention, the republican government defeated the Bolsheviks, but it appears that the Russian revolutionary spirit was not extinguished. \n\nAfter ineffective land reform by the Kerensky government and austerity measures to pay off the Brest-Litovsk reparations, as well as a crisis in the government after the President's assassination, the cities in the western part of the nation have been engulfed with the Red tide once more. Will Bukharin's Soviet Russia prevail, or will the loyalists of the White government defeat the dissenters a second time?"
 worldnews.3.a:0 "A troublesome development."
+second_russian_civil_war_threat:0 "The Second Russian Civil War"
 
 worldnews.4.t:0 "The Spanish Civil War"
 worldnews.4.d:0 "Ever since the defeat of Napoleon, Spain has been plagued by violence, dissent and turmoil, but it appears that these tensions have reached a breaking point. That is, the Spanish kingdom has been ripped apart in a three-sided civil war between numerous factions - the loyalists of the Madrid government, the supporters of the pretender Javier and finally the anarcho-syndicalist party known as the CNT-FAI. There are already numerous reports of volunteers and equipment being shipped to Spain from all over the world to support one faction or another. \n\nIt can be safely said that the fields and mountains of Spain will be the first battlefield of a much wider conflict between the left and the right..."
 worldnews.4.a:0 "A troublesome development."
+spanish_civil_war_threat:0 "The Spanish Civil War"
 
 worldnews.5.t:0 "The Second Weltkrieg"
 worldnews.5.d:0 "The Weltkrieg is universally agreed to have been the most horrible war in human existence, but it appears that even the greatest nightmares cannot deter man's lust for blood. After numerous political struggles and periods of diplomatic tension, the uneasy peace between Germany and France has broken down. These two superpowers are now mobilising their armies and preparing for a conflict never before seen to the human eye. \n\nThe military developments of the Interwar will be put to the ultimate test. New types of weapons, planes, artillery, ships and tanks will see their first usage in the battlefield. But who will emerge victorious? That is a question none can answer."
@@ -38,6 +41,7 @@ worldnews.9.a:0 "An interesting development."
 worldnews.10.t:0 "Rise of the Mongol Empire"
 worldnews.10.d:0 "News and reliable sources of them are scarce in the vast plains of Mongolia, but it has recently come to light that the Mad Baron of Mongolia, Roman Ungern von Sternberg, has risen to new heights and declared himself to be the successor to Genghis Khan, appropriately named Ungern Khan. \n\nIt is now known what this change will entail, though. The Mongolian army has already defeated the Ma Clique and von Sternberg has declared his right to reign over all Mongolians numerous times before. Experts deny the possibility that the Mongolians could pose a threat to the established powers in the Far East, but the fresh Khan's ambition can only grow higher..."
 worldnews.10.a:0 "Can't get any more insane than that."
+rise_mongol_empire_threat:0 "Rise of the Mongol Empire"
 
 worldnews.11.t:0 "War of the Atlantic - Canadian intervention"
 worldnews.11.d:0 "What started out as a mere incident caused by a show of force by the British socialist navy has now devolved into an outright war across the Atlantic. The Union of Britain has declared its goal of spreading Syndicalism to the nearby state of Ireland, which prompted an intervention by the exiled British royalist government in Canada. The navies and air forces of both belligerents are already being mobilised, and the first shots have already been fired in the Irish Sea. \n\nExperts believe that the intensity of this conflict will be limited due to the large bodies of water separating the belligerents, but it has nevertheless raised world tensions to new heights."
@@ -146,6 +150,7 @@ worldnews.36.a:0 "Interesting."
 worldnews.37.t:0 "The Fourth Balkan War"
 worldnews.37.d:0 "A country was reborn in the Balkans after the Weltkrieg - Greater Bulgaria, the titan of the peninsula, uniting all Bulgarian lands and beyond. This kingdom for all Bulgarians was born with bloodshed and war, though, defeating Serbia, Greece and Romania in the Weltkrieg, a move that these three nations are still bitter about today. \n\nThis tension led to the formation of the Belgrade Pact, and this alliance of Balkan states has now declared war on the Tsardom, throwing the region into conflict yet again. Will Tsar Boris III save his nation from this overwhelming force, or will his kingdom be divided once more?"
 worldnews.37.a:0 "What's with the Balkans and war all the time?"
+fourth_balkan_war_threat:0 "The Fourth Balkan War"
 
 worldnews.38.t:0 "The End of the American Civil War"
 worldnews.38.d:0 "The Second American Civil War, the bloodiest conflict to ever descend on the New World, is over. And as sobbing widows bury their dead husbands and sons, the old regime of the United States of America has re-established itself across the 48 States. Martial law is being removed across the nation, and the last rebel holdouts are being taken care of by the National Guard. \n\nEven though the United States has won, the loss that it had to endure will change the face of the nation forever. Most major cities are heavily damaged, hundreds of thousands are dead or injured, and the carefree, open mentality of the American people has taken a drastic blow..."
@@ -167,9 +172,10 @@ worldnews.42.t:0 "The End of the American Civil War"
 worldnews.42.d:0 "The Second American Civil War, the bloodiest conflict to ever descend on the New World, is over. And as sobbing widows bury their dead husbands and sons, the last traces of the old regime are being swept away by the American Revolution, headed by the Combined Syndicates of America. The old capitalist system is being dissolved and replaced with an organisation similar to that of France and Britain, and the red-black banner now flies over the former Congress, soon to be converted to the Congress of the Syndicates.\n\nThe CSA has already strained its relations with Canada, and it already looks forward to becoming the vanguard of Syndicalism in the New World. America - it has changed, forever..."
 worldnews.42.a:0 "The World Revolution spreads further."
 
-worldnews.43.t:0 "Revolt in the Mitteleuropa!"
+worldnews.43.t:0 "Revolt in the Mitteleuropa"
 worldnews.43.d:0 "After the fall of the Russian Empire in the Weltkrieg, Germany occupied vast swathes of Eastern Europe, establishing puppet governments across it and creating the Mitteleuropa military alliance. This tightly knit alliance of countries was not meant to last, it seems, as Eastern Europe roared back to action this week with a revolt in the German sphere.\n\nThe Lithuanians, led by A. Voldemaras, their Vadas - Leader - have declared full independence from Germany, and this has sparked a chain reaction in neighbouring countries. Germany has moved in with a military response, but will it be enough to crush the spirit of nationalism?"
 worldnews.43.a:0 "Lithu-who?"
+mitteleuropa_revolt_threat:0 "Revolt in the Mitteleuropa"
 
 ### AllyJamy's City Fall Events ###
 
@@ -208,3 +214,4 @@ worldnews.257.t:0 "Civil War in Ethiopia"
 worldnews.257.d:0 "Civil war has erupted in Ethiopia after Haile Selassie I's refusal to back down over his industry reforms. The nobility have taken up arms agains the Negus Negast, seeking to take over the country by force. Only time will tell if they can succeed."
 worldnews.257.a:0 "Not another one!"
 worldnews.257.b:0 "Look, we're on the World News!"
+ethiopia_civil_war_threat:0 "Civil War in Ethiopia"
