--- a/localisation/core_l_english.yml
+++ b/localisation/core_l_english.yml
@@ -271,7 +271,7 @@ MENU_BAR_LOAD:0 "Load"
 MENU_BAR_QUIT:0 "Exit Game"
 MENU_BAR_SAVE_GAME:0 "Save Game"
 MENU_BAR_GAME_OPTIONS:0 "Game Options"
-MENU_BAR_GAME_WIKI:0 "Hearts of Iron Wiki"
+MENU_BAR_GAME_WIKI:0 "Kaiserreich Wiki"
 MENU_BAR_GAME_RESIGN:0 "Exit to Menu"
 MENU_BAR_MESSAGE_SETTINGS:0 "Messages"
 MENU_BAR_CLOSE:0 "Close"
@@ -281,9 +281,9 @@ MENU_BAR_SAVE_PLAY:0 "Save & Play"
 MENU_BAR_IRONMAN_SAVE:0 "Ironman Save Game"
 MENU_BAR_IRONMAN_PLAIN:0 "Ironman"
 MENU_HOMEPAGE:0 "Hearts of Iron IV Homepage"
-MENU_FORUM:0 "Hearts of Iron IV Forum"
+MENU_FORUM:0 "Kaiserreich Forum"
 MENU_FACEBOOK:0 "Hearts of Iron IV Facebook"
-MENU_TWITTER:0 "Hearts of Iron IV Twitter"
+MENU_TWITTER:0 "Kaiserreich Twitter"
 MAIN_MENU:0 "Main menu"
 MAIN_MENU_BACK:0 "Back to Menu"
 HELP_MENU:0 "Help"
