--- a/localisation/KR_Ireland_l_english.yml
+++ b/localisation/KR_Ireland_l_english.yml
@@ -1,19 +1,26 @@
 ﻿l_english:
 
 ### Parties ###
-IRE_social_democrat_party:0 "Sinn Féin"
+IRE_social_democrat_party:0 "SF"
+IRE_social_democrat_party_long:0 "Sinn Féin"
 IRE_syndicalist_party:0 "IWL"
 IRE_syndicalist_party_long:0 "Irish Worker League"
 IRE_social_conservative_party:0 "NCP"
 IRE_social_conservative_party_long:0 "National Centre Party"
-IRE_authoritarian_democrat_party:0 "Fine Gael"
-IRE_national_populist_party:0 "Clann Éireann"
-IRE_social_liberal_party:0 "Fianna Fáil"
-IRE_paternal_autocrat_party:0 "Ailtirí na hAiséirghe"
-IRE_market_liberal_party:0 "CPE"
+IRE_authoritarian_democrat_party:0 "FG"
+IRE_authoritarian_democrat_party_long:0 "Fine Gael"
+IRE_national_populist_party:0 "CÉ"
+IRE_national_populist_party_long:0 "Clann Éireann"
+IRE_social_liberal_party:0 "FF"
+IRE_social_liberal_party_long:0 "Fianna Fáil"
+IRE_paternal_autocrat_party:0 "ANH"
+IRE_paternal_autocrat_party_long:0 "Ailtirí na hAiséirghe"
+IRE_market_liberal_party:0 "CPNH"
 IRE_market_liberal_party_long:0 "Cumann Poblachta na hÉireann"
-IRE_radical_socialist_party:0 "Saor Éire"
-IRE_totalist_party:0 "an Común"
+IRE_radical_socialist_party:0 "SÉ"
+IRE_radical_socialist_party_long:0 "Saor Éire"
+IRE_totalist_party:0 "RWG"
+IRE_totalist_party_long:0 "Revolutionary Workers Group"
 
 ### Ideas ###
 IRE_IEAA_INDUSTRY:0 "IEAA Annual Focus: Industrialisation"
