--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -2161,9 +2161,9 @@ IRE_national_populist_DEF:0 "Ireland"
 IRE_paternal_autocrat:0 "Ireland"
 IRE_paternal_autocrat_ADJ:0 "Irish"
 IRE_paternal_autocrat_DEF:0 "Ireland"
-IRE_radical_socialist:0 "Aon Éire"
+IRE_radical_socialist:0 "Irish Socialist Republic"
 IRE_radical_socialist_ADJ:0 "Irish"
-IRE_radical_socialist_DEF:0 "Aon Éire"
+IRE_radical_socialist_DEF:0 "Irish Socialist Republic"
 IRE_social_conservative:0 "Ireland"
 IRE_social_conservative_ADJ:0 "Irish"
 IRE_social_conservative_DEF:0 "Ireland"
@@ -2173,12 +2173,12 @@ IRE_social_democrat_DEF:0 "Ireland"
 IRE_social_liberal:0 "Ireland"
 IRE_social_liberal_ADJ:0 "Irish"
 IRE_social_liberal_DEF:0 "Ireland"
-IRE_syndicalist:0 "Aon Éire"
+IRE_syndicalist:0 "Irish Socialist Republic"
 IRE_syndicalist_ADJ:0 "Irish"
-IRE_syndicalist_DEF:0 "Aon Éire"
-IRE_totalist:0 "Aon Éire"
+IRE_syndicalist_DEF:0 "Irish Socialist Republic"
+IRE_totalist:0 "Irish Socialist Republic"
 IRE_totalist_ADJ:0 "Irish"
-IRE_totalist_DEF:0 "Aon Éire"
+IRE_totalist_DEF:0 "Irish Socialist Republic"
 
 IRQ_authoritarian_democrat:0 "Iraq"
 IRQ_authoritarian_democrat_ADJ:0 "Iraqi"
