some more work on america

--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -140,7 +140,6 @@ USA_expand_annapolis:0 "Expand Annapolis"
 USA_expand_annapolis_desc:0 ""
 USA_marine_corps:0 "Expand the Marine Corps"
 USA_marine_corps_desc:0 ""
-USA_marine_training:0 "Marine Training"
 USA_new_aircraft_carriers:0 "New Aircraft Carriers"
 USA_new_aircraft_carriers_desc:0 ""
 
@@ -153,8 +152,8 @@ USA_fighter_efforts:0 "Fighter Effort"
 USA_fighter_efforts_desc:0 ""
 USA_strategic_bombers:0 "Strategic Bombers"
 USA_strategic_bombers_desc:0 ""
-USA_air_support:0 "Spaatz's Air Support"
-USA_air_support_desc:0 ""
+USA_support_ground_air:0 "Spaatz's Air Support"
+USA_support_ground_air_desc:0 ""
 USA_cas_efforts:0 "Close Air Support"
 USA_cas_efforts_desc:0 ""
 USA_tactical_bombers:0 "Tactical Bombers"
