Added Anti-Kolchak coup and rest of expansion events.

--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -293,6 +293,54 @@ tram.65.t:0 "Soviet Russia submits"
 tram.65.d:0 "The new-established regime in Siberia have shown their weakness. They have accepted to return our lands to us."
 tram.65.a:0 "Smart choice"
 
+tram.66.t:0 "The Japanese reaction"
+tram.66.d:0 "Our client state, the Transamur Republic, has established its control over parts of Siberia. While this is a fine addition to the Co-Prosperity Sphere it is possible that Transamur is becoming too powerful and needs to be restrained."
+tram.66.a:0 "Demand Kamchatka and Okhotsk!"
+tram.66.b:0 "It is good to have strong client states!"
+
+tram.67.t:0 "Transamur tries to escape our influence"
+tram.67.d:0 "With the recent reconquest of Siberia by Transamur they have become much bolder, trying to forge their own way under the sun. Recently they have moved their capital from Vladivostok to more remote parts of their republic, a clear attempt to minimize our influence. What shall we do?"
+tram.67.a:0 "It is good to have strong allies!"
+tram.67.b:0 "Try to restore our influence over Transamur!"
+
+tram.68.t:0 "The Japanese are trying to subdue us!"
+tram.68.d:0 "The Japanese feel threatened by our attempts to minimize their influence over our country and they have issued an ultimatum to us in which they demand the cessation of steps threatening their sphere of prosperity."
+tram.68.a:0 "Submit before Japan."
+tram.68.b:0 "Never!"
+
+tram.80.t:0 "Anti-Kolchak Coup"
+tram.80.d:0 "The opposition have started an open revolt against us. Disloyal generals and soldiers, leading by Sergei Wojciechowski, have captured the most important neighborhoods and now marching right to us. Those divisions which are loyal to admiral Kolchak are ready to fight with domestic enemies."
+tram.80.a:0 "Kolchak's guard have defeated the rebels"
+tram.80.b:0 "Kolchak was overthrown"
+
+tram.81.t:0 "Kolchak was overthrown"
+tram.81.d:0 "Aleksander Kolchak, leader of Transamur for more than 12 years, was overthrown by members of the general staff led by Sergei Wojciechowski and was executed by a firing squad. His death opens the field for various possiblities of political change in Transamur including the declaration of a republic, if Sergei Wojciechowski and his staff allows it."
+tram.81.a:0 "Sergei Wojciechowski is the new leader of Transamur!"
+tram.81.b:0 "A Republic is founded"
+
+tram.84.t:0 "Admiral Kolchak was overthrown!"
+tram.84.d:0 "Admiral Kolchak, the long term leader of the Transamur state has been overthrown and assasinated by members of his own general staff. This was used by the democratic opposition to gain control over the state, effectively turning Transamur from a military junta into a democracy. How shall we react?"
+tram.84.a:0 "Demand the restoration of a military cabinet!"
+tram.84.b:0 "Congratulate the new government!"
+
+tram.85.t:0 "The Japanese are trying to destroy our republic!"
+tram.85.d:0 "The Japanese feel threatened by the sudden restoration of democracy in Transamur and they have issued an ultimatum to us in which they demand the restoration of a military cabinet."
+tram.85.a:0 "Submit before Japan."
+tram.85.b:0 "Never!"
+
+tram.86.t:0 "The Duma Elections"
+tram.86.d:0 "After several months of preparations the provisional government has completed the arrangements for the first free election in Transamur since 1920. There are 90 seats in national assembly available and various political parties have begun their campaigns. Currently only three parties have a chance of gaining a majority, thus forming a new government. Which one shall prevail?"
+tram.86.a:0 "The People`s Far East Party!"
+tram.86.b:0 "The Party of Popular Freedom!"
+tram.86.c:0 "The The Zemski Krai Party!"
+tram.86.e:0 "The army shall put an end to this chaotic democracy!"
+
+tram.87.t:0 "The Duma Elections"
+tram.87.d:0 "According to the Constitution elections are to be held every four years. The state Duma's term has expired and the time has come to elect a new parliament. There are 90 seats in the Duma available and various political parties have begun their campaigns. Only three parties have a chance of gaining the majority, thus forming a new government. Which one shall prevail?"
+tram.87.a:0 "The People`s Far East Party!"
+tram.87.b:0 "The Party of Popular Freedom!"
+tram.87.c:0 "The The Zemski Krai Party!"
+tram.87.e:0 "The army shall put an end to this chaotic democracy!"
 ### Parties ###
 TRM_totalist_party:0 "FETP"
 TRM_radical_socialist_party:0 "TSP"
@@ -316,6 +364,17 @@ TRM_paternal_autocrat_party_long:0 "Military Government"
 TRM_national_populist_party_long:0 "Imperial Restoration Party"
 
 ### Cosmetic ###
+TRM_totalist:0 "Transamur Union"
+TRM_radical_socialist:0 "Transamur Socialist Republic"
+TRM_syndicalist:0 "Commune of Vladivostok"
+TRM_social_democrat:0 "Transamur Republic"
+TRM_social_liberal:0 "Transamur Republic"
+TRM_market_liberal:0 "Transamur Republic"
+TRM_social_conservative:0 "Transamur Republic"
+TRM_authoritarian_democrat:0 "Transamur"
+TRM_paternal_autocrat:0 "Transamur"
+TRM_national_populist:0 "Transamur"
+
 TRM_FE_totalist:0 "Far Eastern Union"
 TRM_FE_radical_socialist:0 "Far Eastern Socialist Republic"
 TRM_FE_syndicalist:0 "Far Eastern Commune"
@@ -326,6 +385,17 @@ TRM_FE_social_conservative:0 "Far Eastern Republic"
 TRM_FE_authoritarian_democrat:0 "Russian Far Eastern Republic"
 TRM_FE_paternal_autocrat:0 "Russian Far Eastern Republic"
 TRM_FE_national_populist:0 "Russian Far Eastern Republic"
+
+TRM_RUS_totalist:0 "Russian Union"
+TRM_RUS_radical_socialist:0 "Russian Socialist Republic"
+TRM_RUS_syndicalist:0 "Commune of Russia"
+TRM_RUS_social_democrat:0 "Russian Republic"
+TRM_RUS_social_liberal:0 "Russian Republic"
+TRM_RUS_market_liberal:0 "Russian Republic"
+TRM_RUS_social_conservative:0 "Russian Republic"
+TRM_RUS_authoritarian_democrat:0 "Russian Republic"
+TRM_RUS_paternal_autocrat:0 "Russian Republic"
+TRM_RUS_national_populist:0 "Russian Republic"
 
 ### Ideas ###
 TRM_kolchak:0 "Admiral-Dictator"
@@ -339,6 +409,7 @@ TRM_factory:0 "Investment in Heavy Industry"
 TRM_goods:0 "Welfare State"
 TRM_mil_stuff:0 "Loyal Military Cabinet"
 TRM_purge:0 "Aftermath of the Purge"
+TRM_new_military:0 "New Military Cabinet"
 TRM_anti_kolchak:0 "Anti-Kolchak Sentiments"
 TRM_anti_kolchak_desc:0 "Kolchak's regime has few supporters and many haters. Most of liberals are in open opposition to him, while his own generals are not trustworthy. There even is a chance that they will start a coup to overthrow Kolchak. "
 
@@ -364,9 +435,9 @@ TRM_Ind_Khab:0 "Expand Industry in Khabarovsk"
 TRM_Ind_Transsib:0 "Improve Transsib Railroad"
 TRM_Ind_Sib:0 "Expand Far Eastern Industry"
 TRM_Ind_Okh:0 "Improve the Okhotsk Port"
-TRM_Ind_Bai:0 "Expand Industry in Baikal Lake Region"
+TRM_Ind_Bai:0 "Expand Industry in Lake Baikal Region"
 TRM_Ind_Mon:0 "Expand Industry in Former Mongol Lands"
-TRM_Ind_Transsib_exp:0 "Revise The Transsib"
+TRM_Ind_Transsib_exp:0 "Modernise the Whole Transsib"
 TRM_Ind_West_Sib:0 "Expand Industry in Western Siberia"
 TRM_Ind_Research:0 "Siberian Scientists"
 TRM_Arm_Start:0 "Begin Militarisation"
@@ -398,6 +469,7 @@ TRM_Integrate_Bai:0 "Integrate Baikal"
 TRM_Integrate_Mon:0 "Integrate Former Mongolian Lands"
 TRM_Claim_West_Sib:0 "Go West"
 TRM_Integrate_West_Sib:0 "Integrate West Siberia"
+TRM_Cap_Novosibirsk:0 "Move Capital to Novosibirsk"
 TRM_Claim_Russia:0 "Final Solution"
 TRM_Become_Russia:0 "Become Russia"
 
@@ -408,3 +480,6 @@ TRM_sov:0 "The Reds are too weak to control Russian Far East, this focus will gi
 ### Flags ###
 TRM_control_FE:0 "Russian Far East is our"	
 TRM_sib_war:0 "War in Siberia"
+TRM_Kolchak_alive:0 "Kolchak still leading the Transamur"
+TRM_Mil_coup:0 "Military Cabinet takes power"
+TRM_Dem_coup:0 "A Republic is founded"
