First fixes on thinking Thinking_waffle's words

--- a/localisation/KR_Companies_l_english.yml
+++ b/localisation/KR_Companies_l_english.yml
@@ -888,3 +888,19 @@ germaniawerft:0 "Germaniawerft"
 Kaiserliche_werft_wilhelmshaven:0 "Kaiserliche Werft Wilhelmshaven"
 schichau_werke:0 "Schichau-Werke"
 vulcan_stettin:0 "AG Vulcan Stettin"
+
+### Flanders-Wallonia ###
+cockerill:0 "Cockerill"
+societe_belge_radio:0 "Société Belge Radio-électrique"
+solvay:0 "Solvay"
+fabrique_nationale:0 "Fabrique Nationale"
+fonderie_royale_canons:0 "Fonderie Royale de Canons"
+imperia:0 "Imperia Automobiles"
+minerva:0 "Minerva"
+familleureux:1 "Familleureux"
+la_brugeoise:0 "La Brugeoise"
+renard:0 "Renard"
+avions_fairey:0 "Avions Fairey"
+sabca:0 "SABCA"
+stampe_vertongen:0 "Stampe et Vertongen"
+boel_zonen:0 "J. Boel & Zonen"
