Quick note so I know where i have checked up to

--- a/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -345,10 +345,10 @@ bel.69.t:0 "Belgian Tanks ready"
 bel.69.d:0 "Our factories have prepared their first batch of Belgian tanks and are ready to enter mass production."
 bel.69.a:0 "Very well"
 
+# checked up-to here
+
 ### Thinking waffle suggested text ###
-
 BEL_Charles_d'Aspremont_Lynden_for_pau:0 "Charles d'Aspremont Lynden"
-
 ### Military High Command ###
 BEL_Victor_van_Strydonck_de_Burkel_mhc_sco:0 "Victor van Strydonck"
 BEL_Adolphe_Cumont_mhc_sco:0 "Adolphe Cumont"
