Someone can actually spell, this was so nice to read

--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -299,17 +299,17 @@ tram.66.a:0 "Demand Kamchatka and Okhotsk!"
 tram.66.b:0 "It is good to have strong client states!"
 
 tram.67.t:0 "Transamur tries to escape our influence"
-tram.67.d:0 "With the recent reconquest of Siberia by Transamur they have become much bolder, trying to forge their own way under the sun. Recently they have moved their capital from Vladivostok to more remote parts of their republic, a clear attempt to minimize our influence. What shall we do?"
+tram.67.d:0 "With the recent reconquest of Siberia by Transamur they have become much bolder, trying to forge their own way under the sun. Recently they have moved their capital from Vladivostok to more remote parts of their republic, a clear attempt to minimise our influence. What shall we do?"
 tram.67.a:0 "It is good to have strong allies!"
 tram.67.b:0 "Try to restore our influence over Transamur!"
 
 tram.68.t:0 "The Japanese are trying to subdue us!"
-tram.68.d:0 "The Japanese feel threatened by our attempts to minimize their influence over our country and they have issued an ultimatum to us in which they demand the cessation of steps threatening their sphere of prosperity."
+tram.68.d:0 "The Japanese feel threatened by our attempts to minimise their influence over our country and they have issued an ultimatum to us in which they demand the cessation of steps threatening their sphere of prosperity."
 tram.68.a:0 "Submit before Japan."
 tram.68.b:0 "Never!"
 
 tram.80.t:0 "Anti-Kolchak Coup"
-tram.80.d:0 "The opposition have started an open revolt against us. Disloyal generals and soldiers, leading by Sergei Wojciechowski, have captured the most important neighborhoods and now marching right to us. Those divisions which are loyal to admiral Kolchak are ready to fight with domestic enemies."
+tram.80.d:0 "The opposition have started an open revolt against us. Disloyal generals and soldiers, leading by Sergei Wojciechowski, have captured the most important neighbourhoods and now marching right to us. Those divisions which are loyal to admiral Kolchak are ready to fight with domestic enemies."
 tram.80.a:0 "Kolchak's guard have defeated the rebels"
 tram.80.b:0 "Kolchak was overthrown"
 
@@ -341,6 +341,7 @@ tram.87.a:0 "The People`s Far East Party!"
 tram.87.b:0 "The Party of Popular Freedom!"
 tram.87.c:0 "The The Zemski Krai Party!"
 tram.87.e:0 "The army shall put an end to this chaotic democracy!"
+
 ### Parties ###
 TRM_totalist_party:0 "FETP"
 TRM_radical_socialist_party:0 "TSP"
