Spelling fixes, and Atlanta>New Orleans

--- a/localisation/KR_Canada_l_english.yml
+++ b/localisation/KR_Canada_l_english.yml
@@ -61,6 +61,7 @@ CAN_AUS_PACT:0 "Pact with the American Union State"
 CAN_CSA_PACT:0 "Pact with the Combined Syndicates of America"
 entente_research_name:0 "The Imperial Scientific and Academic Council"
 entente_research_desc:0 "The Imperial Scientific and Academic Council is the scientific institute of the British Empire as well as the Entente."
+
 ### Parties ###
 CAN_totalist_party:0 "CCP"
 CAN_totalist_party_long:0 "Canadian Communist Party"
@@ -377,7 +378,7 @@ CAN_demand_oregon_desc:0 "The so called 'Pacific States' are isolated and weak. 
 CAN_recognize_csa:0 "Recognise Chicago"
 CAN_recognize_csa_desc:0 "We can no longer afford to maintain a pretence of neutrality while a bloody conflict rages beyond our border. We should officially recognise the Combined Syndicates and open diplomatic channels with our comrades in Chicago."
 CAN_recognize_aus:0 "Recognise Atlanta"
-CAN_recognize_aus_desc:0 "We can no longer afford to maintain a pretence of neutrality while a bloody conflict rages beyond our border. We should officially recognise the American Union State and its government in New Orleans. With our support, they could prove a useful counterbalance to the dangerous Americans and repugnant Syndicalists."
+CAN_recognize_aus_desc:0 "We can no longer afford to maintain a pretence of neutrality while a bloody conflict rages beyond our border. We should officially recognise the American Union State and its government in Atlanta. With our support, they could prove a useful counterbalance to the dangerous Americans and repugnant Syndicalists."
 CAN_recognize_usa:0 "Support Washington"
 CAN_recognize_usa_desc:0 "We can no longer afford to maintain a pretence of neutrality while a bloody conflict rages beyond our border. We should affirm our support for the government in Washington, and expand our diplomatic relations with them, lest they fall and we find ourselves standing alone against a dangerous rogue state."
 CAN_pact_with_usa:0 "Pact with the USA"
@@ -732,7 +733,7 @@ canada.111.a:0 "Direct Rule"
 canada.111.b:0 "Limited Self-Government"
 canada.111.c:0 "Begin negotiations with the Irish Provisional Government."
 canada.100.t:0 "Bill C-7: The Future of Canada's Industry"
-canada.100.d:0 "When the Great war began, the British Prime Minister Herbert Asquith said that industry would proceed as ‘Business as Usual’. The ensuing shell crisis and the difficulty found in equipping the British army has shown us that if another war were to start, we will need a mobilised war economy. However, most businessmen aren’t willing to invest in specialised facilities such as Heavy Bomber factories that such an economy would require. Some Conservative MP’s are proposing that part of the Security bill include a provision to immediately nationalise such key war industries. While this wouldn’t increase the size of our industrial capacity, it would cut down on a lot of red tape. C.D. Howe, the minister of munitions, argues that the government subsidise the creation of such industries that entrepreneurs would lease at very preferable rates and provide the labour which would increase the number of factories, but limit their efficiency by working with the private sector. Some MP’s are arguing for a compromise where the government will nationalise the specialised industries that require a great deal of sophistication while subsidizing the more basic ones already in place."
+canada.100.d:0 "When the Great war began, the British Prime Minister Herbert Asquith said that industry would proceed as ‘Business as Usual’. The ensuing shell crisis and the difficulty found in equipping the British army has shown us that if another war were to start, we will need a mobilised war economy. However, most businessmen aren’t willing to invest in specialised facilities such as Heavy Bomber factories that such an economy would require. Some Conservative MP’s are proposing that part of the Security bill include a provision to immediately nationalise such key war industries. While this wouldn’t increase the size of our industrial capacity, it would cut down on a lot of red tape. C.D. Howe, the minister of munitions, argues that the government subsidise the creation of such industries that entrepreneurs would lease at very preferable rates and provide the labour which would increase the number of factories, but limit their efficiency by working with the private sector. Some MP’s are arguing for a compromise where the government will nationalise the specialised industries that require a great deal of sophistication while subsidising the more basic ones already in place."
 canada.100.a:0 "C.D. Howe is a cabinet minister for a reason!"
 canada.100.b:0 "Compromise is an art as old as politics itself"
 canada.100.c:0 "Side with the Tories, nationalise the economy"
