Two Ukrainian ideas at the game start

--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -1,6 +1,8 @@
 ﻿l_english:
 
 ### Ideas ###
+language_issue:0 "Issue of the Russian language"
+Hetman_army:0 "Hetman's Army"
 german_military_advisors:0 "German Military Advisers"
 UKR_black_monday:0 "Black Monday"
 increase_taxes:0 "Increased Taxes"
