Minor work on the Fengtian tree.

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -8,7 +8,7 @@ JAP_WAR_REP_FULL:0 "War Reparations to Germany"
 JAP_WAR_REP_GER_FULL:0 "War Reparations from Japan"
 FNG_CHI_CONQUERED:0 "We Unified China"
 FNG_Fortress_Manchuria_i:0 "Fortress Manchuria"
-FNG_National_Irredentism_i:0 "National Irredentism"
+FNG_The_National_Reclamation_War:0 "The National Reclamation War"
 FNG_Backward_Industry:0 "Backward Industry"
 FNG_Unscrupulous_Governance:0 "Unscrupulous Governance"
 
