integrated some map changes in afrika
fixed the color of the finnish flags
fixed the errors related to wrong technology tags
fixed the errors related to graphics

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -868,3 +868,6 @@ STATE_865:0 "Länsi-Karjala"
 STATE_866:0 "Gelderland"
 STATE_867:0 "Trivancore"
 STATE_868:0 "Kolhapur"
+STATE_869:0 "Ruanda"
+STATE_870:0 "Burundi"
+STATE_871:0 "Njassaland"
