This commit will break everything, and I don't even care. I ain't fixing it.

--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -23,6 +23,12 @@ cyp_cyprus1:0 "Abandoned Cyprus"
 ott_air_designs:0 "Allowed aircraft licensing"
 ott_air_designs_rejected:0 "Refused to sell licence"
 ott_naval_dominance:0 "Ottoman naval dominance"
+ott_gen_1:0 "Armed rebels"
+ott_gen_2:0 "Organized revolt"
+ott_gen_3:0 "Infiltrated Ottoman Army"
+ott_arab_gen_1:0 "Organized revolt"
+ott_arab_gen_2:0 "Armed rebels"
+ott_arab_gen_3:0 "Hashemite spy networks"
 
 # EGYPT FILE # (Will be located in here temporarily)
 arabcon:0 "Arabian nationalism"
@@ -302,8 +308,8 @@ OTT_marmara_blacksea:0 "Marmara and Black Sea"
 OTT_marmara_blacksea_desc:0 ""
 OTT_mediterranean:0 "Eastern Mediterranean"
 OTT_mediterranean_desc:0 ""
-OTT_gulf_of_persia:0 "Gulf of Persia"
-OTT_gulf_of_persia_desc:0 ""
+OTT_gulf_of_basra:0 "Gulf of Basra"
+OTT_gulf_of_basra_desc:0 ""
 
 ### Events ###
 ott.1.t:0 "The Eternal State"
