--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -49,6 +49,8 @@ POL_exceptionalism_idea:0 "Polish Exceptionalism"
 POL_exceptionalism_idea_desc:0 "to-do"
 POL_redistribute_wealth_idea:0 "Redistributed Wealth"
 POL_redistribute_wealth_idea_desc:0 "to-do"
+POL_peoples_king_idea:0 "The People's King"
+POL_peoples_king_idea_desc:0 "to-do"
 
 ### Foci ###
 POL_the_great_debate:0 "The Great Debate"
@@ -104,7 +106,7 @@ POL_militarism:0 "Polish Militarism"
 POL_cleanse_monarchists:0 "Crush the Monarchists"
 POL_fortress_poland:0 "Fortress Poland"
 POL_opportunism:0 "The New Polish Opportunism"
-POL_reclaim_vilnus:0 "Reclaim Vilinus"
+POL_reclaim_vilnus:0 "Reclaim Vilnius"
 POL_ruthenian_dispute:0 "The Ruthenian Dispute"
 POL_cossack_alliance:0 "Reds in the Ukraine"
 POL_skewer_ukraine:0 "Skewer Ukraine"
@@ -205,7 +207,7 @@ POL_militarism_desc:0 "Polish Militarism"
 POL_cleanse_monarchists_desc:0 "Crush the Monarchists"
 POL_fortress_poland_desc:0 "Fortress Poland"
 POL_opportunism_desc:0 "The New Polish Opportunism"
-POL_reclaim_vilnus_desc:0 "Reclaim Vilinus"
+POL_reclaim_vilnus_desc:0 "Reclaim Vilnius"
 POL_ruthenian_dispute_desc:0 "The Ruthenian Dispute"
 POL_cossack_alliance_desc:0 "Reds in the Ukraine"
 POL_skewer_ukraine_desc:0 "Skewer Ukraine"
@@ -264,8 +266,8 @@ POL_line_of_succession_desc:0 "A Clear Line of Succession"
 POL_join_international_community_desc:0 "Join the International Community"
 POL_steelworks:0 "Scheibler and Grohman Works"
 POL_steelworks_desc:0 "Scheibler and Grohman Works"
-POL_entente_technology:0 "Entente Technology"
-POL_entente_technology_desc:0 "Entente Technology"
+POL_entente_technology:0 "The Imperial Scientific Council"
+POL_entente_technology_desc:0 "The Imperial Scientific Council"
 
 POL_mendog_iii:0 "A Lithuanian King!"
 POL_mendog_iii_desc:0 "A Lithuanian King!"
@@ -289,8 +291,12 @@ POL_tp_program:0 "The TP Program"
 POL_tp_program_desc:0 "The TP Program"
 POL_expand_airbase:0 "Expand our Air Defenses"
 POL_expand_airbase_desc:0 "Expand our Air Defenses"
-POL_brest_livotsk:0 "Brest-Litovsk"
-POL_brest_livotsk_desc:0 "Brest-Litovsk"
+POL_brest_livotsk:0 "Return of Brest-Litovsk"
+POL_brest_livotsk_desc:0 "Return of Brest-Litovsk"
+POL_sieze_galicia:0 "Sieze Galicia"
+POL_sieze_galicia_desc:0 "Sieze Galicia"
+POL_radek_policy:0 "Radek's New Policy"
+POL_radek_policy_desc:0 "Radek's New Policy"
 
 ### Opinion Modifiers ###
 POL_NATIONALISTS_GOV:0 "Nationalist government in Poland"
@@ -799,7 +805,7 @@ poland.111.t:0 "Ukraine Offers Peace"
 poland.111.d:0 "It is clear that we lost the war against the Ukraine and continuation of the fight will cause the fall of the Polish state. Ukraine proposes peace, but demands Eastern Galicia- should we agree to that?"
 poland.111.a:0 "We have to save Poland"
 poland.111.b:0 "Fight to the end!"
-poland.112.t:0 "Prussian partition"
+poland.112.t:0 "Prussian Partition"
 poland.112.d:0 "The Polish-Lithuanian Commonwealth lost much during the partitions of Poland in the late 18th century. Many provinces were ceded to the Kingdom of Prussia. Now Germany is at war and we are strong; should we press claims on our former lands?"
 poland.112.a:0 "Press claims on all our rightful lands!"
 poland.112.b:0 "Press claims on the Prussian partition and Silesia"
@@ -1000,13 +1006,87 @@ poland.169.a:0 "I see."
 poland.170.t:0 "Poland's New Alliance"
 poland.170.d:0 "to-do"
 poland.170.a:0 "We will gladly continue our alliance."
-poland.167.b:0 "It is not something we need."
+poland.170.b:0 "It is not something we need."
 poland.171.t:0 "The Cossacks Ride With Us!"
 poland.171.d:0 "to-do"
 poland.171.a:0 "Glorious!"
 poland.172.t:0 "The Cossacks Ride On..."
 poland.172.d:0 "to-do"
 poland.172.a:0 "Truly a tragedy."
+poland.173.t:0 "Poland Invites Us to the Internationale"
+poland.173.d:0 "to-do"
+poland.173.a:0 "We are stronger together."
+poland.173.b:0 "We are stronger alone."
+poland.174.t:0 "Ukraine Accepts our Invitation"
+poland.174.d:0 "to-do"
+poland.174.a:0 "As they should!"
+poland.175.t:0 "Ukraine Declines our Invitation"
+poland.175.d:0 "to-do"
+poland.175.a:0 "A blunder, surely."
+
+poland.176.t:0 "Our Claims to Galicia"
+poland.176.d:0 "to-do"
+poland.176.a:0 "Demand our territory be returned!"
+poland.176.b:0 "It is enough to declare them rightfully ours."
+poland.177.t:0 "Poland Demands Galicia!"
+poland.177.d:0 "to-do"
+poland.177.a:0 "We're not in a position to refuse."
+poland.177.b:0 "Never!"
+poland.178.t:0 "Galicia is ours!"
+poland.178.d:0 "to-do"
+poland.178.a:0 "Another rightful part of Poland, returned."
+poland.179.t:0 "We've Been Denied!"
+poland.179.d:0 "to-do"
+poland.179.a:0 "We'll back down...for now."
+poland.179.b:0 "Attack the Galicians!"
+poland.179.c:0 "Attack the Austrians!"
+poland.180.t:0 "Our Claims to Vilnius"
+poland.180.d:0 "to-do"
+poland.180.a:0 "Demand our territory be returned!"
+poland.180.b:0 "It is enough to declare them rightfully ours."
+poland.181.t:0 "Poland Demands Vilnius!"
+poland.181.d:0 "to-do"
+poland.181.a:0 "We're not in a position to refuse."
+poland.181.b:0 "Never!"
+poland.182.t:0 "Vilnius is ours!"
+poland.182.d:0 "to-do"
+poland.182.a:0 "Another rightful part of Poland, returned."
+poland.183.t:0 "We've Been Denied!"
+poland.183.d:0 "to-do"
+poland.183.a:0 "We'll back down...for now."
+poland.183.b:0 "Attack the Lithuanians!"
+poland.183.c:0 "Attack the Germans!"
+poland.184.t:0 "Our Claims to Brest-Livotsk"
+poland.184.d:0 "to-do"
+poland.184.a:0 "Demand our territory be returned!"
+poland.184.b:0 "It is enough to declare them rightfully ours."
+poland.185.t:0 "Poland Demands Brest-Livotsk!"
+poland.185.d:0 "to-do"
+poland.185.a:0 "We're not in a position to refuse."
+poland.185.b:0 "Never!"
+poland.186.t:0 "Brest-Livotsk is ours!"
+poland.186.d:0 "to-do"
+poland.186.a:0 "Another rightful part of Poland, returned."
+poland.187.t:0 "We've Been Denied!"
+poland.187.d:0 "to-do"
+poland.187.a:0 "We'll back down...for now."
+poland.187.b:0 "Attack the Ruthenians!"
+poland.187.c:0 "Attack the Germans!"
+poland.188.t:0 "Our Claims to Germany"
+poland.188.d:0 "to-do"
+poland.188.a:0 "Demand our territory be returned!"
+poland.188.b:0 "It is enough to declare them rightfully ours."
+poland.189.t:0 "Poland Demands Territory!"
+poland.189.d:0 "to-do"
+poland.189.a:0 "We're not in a position to refuse."
+poland.189.b:0 "Never!"
+poland.190.t:0 "Poznan is ours!"
+poland.190.d:0 "to-do"
+poland.190.a:0 "Another rightful part of Poland, returned."
+poland.191.t:0 "We've Been Denied!"
+poland.191.d:0 "to-do"
+poland.191.a:0 "We'll back down...for now."
+poland.191.b:0 "Attack the Germans!"
 
 ### Global Flags ###
 POL_REPUBLIC:0 "Declared the Polish Republic"
