--- a/localisation/KR_Turkestan_l_english.yml
+++ b/localisation/KR_Turkestan_l_english.yml
@@ -5,3 +5,8 @@ turkestan.1.t:0 "The Hour is at Hand!"
 turkestan.1.d:0 "We are now at war with the infidels in Kazakhstan.  Should we send out a call to all of the Turkmen tribes to engage in a Holy War?"
 turkestan.1.a:0 "Call up the tribes!"
 turkestan.1.b:0 "Our armies are large enough already."
+
+turkestan.2.t:0 "Skirmishes on the frontier"
+turkestan.2.d:0 "There has been a small skirmish between one of our border patrols and Kazakh police.  Eight of our brave soldiers were killed, and many are saying that it is time to launch a war to avenge their deaths, and liberate the Muslims of the Orda from rule by apostates!"
+turkestan.2.a:0 "We must move into Kazakhstan!"
+turkestan.2.b:0 "The time is not yet right"
